Fix the background of the language selection button in dark mode

--- a/main.css
+++ b/main.css
@@ -266,7 +266,6 @@ input[type=number] {
 	}
 
 	#langSelect {
-		background-color: #2c2c2c;
 		color: #fff;
 	}
 }
